Feat: 1.로그인, 회원가입 데이터 연동 로직 완성(503 통신 오류로 재확인 필요) 2.메일폼 컴포넌트 작업 완성

--- a/src/components/Input.module.css
+++ b/src/components/Input.module.css
@@ -1,6 +1,7 @@
 .label{display: block; color: #090A0A; font-weight: 500;}
 .input:not([type="checkbox"]):not([type="radio"]){display: block; width: 100%; padding: 0 0 0 16px; height: 48px; border: 1px solid #E3E5E5; border-radius: 8px; color: #000;}
 .input::placeholder{color: #72777A;}
+.input.error{border: 1px solid #f55050!important;}
 
 @media (max-width: 1199px){
 
