--- a/src/pages/auth/SignInPage.module.css
+++ b/src/pages/auth/SignInPage.module.css
@@ -4,18 +4,18 @@
 .imgBox img{display: block; margin: 0 auto;}
 .snsListBox{position: relative;}
 .snsListBox .easySignInBox{position: absolute; top:-45px; left: 50%; transform: translateX(-50%); width: 106px; height: 32px; display: flex; justify-content: center; align-items: center; border-radius: 8px; color: #fff; font-size: 12px; font-weight: 700; background-color: #000; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);}
-.snsListBox .easySignInBox::after{content: ''; width: 13px; height: 13px; position: absolute;  bottom: -6px; left: 50%; transform: translateX(-50%); background: url(../assets/images/login/Icon01.svg)no-repeat center;}
+.snsListBox .easySignInBox::after{content: ''; width: 13px; height: 13px; position: absolute;  bottom: -6px; left: 50%; transform: translateX(-50%); background: url(../../assets/images/login/Icon01.svg)no-repeat center;}
 .snsListBox .snsList{margin-bottom: 25px; display: flex; justify-content: center; align-items: center;}
 .snsListBox .snsList li a{position: relative; display: block; width: 54px; height: 54px; border-radius: 50px; transition: all .5s;}
 .snsListBox .snsList li a:hover{transform: translateY(-10px);}
 .snsListBox .snsList li a::after{content: ''; position: absolute; top:54%; left: 50%; transform:translate(-50%, -50%);}
 .snsListBox .snsList li a.naverLogin,
 .snsListBox .snsList li a.kakaoLogin{width: 54px; height: 54px;}
-.snsListBox .snsList li a.naverLogin::after{width: 54px; height: 54px; background: url(../assets/images/login/Naver_Img.svg)no-repeat center; background-size: 100% auto;}
+.snsListBox .snsList li a.naverLogin::after{width: 54px; height: 54px; background: url(../../assets/images/login/naver_img.svg)no-repeat center; background-size: 100% auto;}
 .snsListBox .snsList li a.kakaoLogin{margin-right: 10px;}
-.snsListBox .snsList li a.kakaoLogin::after{width: 54px; height: 54px; background: url(../assets/images/login/Kakao_Img.svg)no-repeat center; background-size: 100% auto;}
+.snsListBox .snsList li a.kakaoLogin::after{width: 54px; height: 54px; background: url(../../assets/images/login/kakao_img.svg)no-repeat center; background-size: 100% auto;}
 .snsListBox .snsList li a.googleLogin{width: 46px; height: 46px; box-shadow: 4px 4px 20px rgba(217, 217, 217, 1);}
-.snsListBox .snsList li a.googleLogin::after{width: 46px; height: 46px; background: url(../assets/images/login/Google_Img.svg)no-repeat center;}
+.snsListBox .snsList li a.googleLogin::after{width: 46px; height: 46px; background: url(../../assets/images/login/google_img.svg)no-repeat center;}
 .signupLinkBox{display: flex; gap: 0 6px; justify-content: center;}
 .signupLinkBox span{color: #000;}
 .signupLinkBox a{color: #000; font-weight: 600; text-decoration: underline;}
